day04/kustomize-example/overlays/dev/dev.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"env":"development"},"name":"devns"}}
    labels:
      env: development
    name: devns
- apiVersion: v1
  data:
    EMAIL: fred@gmail.com
    NAME: fred
  kind: ConfigMap
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{"EMAIL":"fred@gmail.com","NAME":"fred"},"kind":"ConfigMap","metadata":{"annotations":{},"labels":{"env":"development"},"name":"dev-dov-cm-654mfb7dkg","namespace":"devns"}}
    labels:
      env: development
    name: dev-dov-cm-654mfb7dkg
    namespace: devns
- apiVersion: v1
  data:
    EMAIL: ZnJlZEBnbWFpbC5jb20=
    NAME: ZnJlZA==
  kind: Secret
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{"EMAIL":"ZnJlZEBnbWFpbC5jb20=","NAME":"ZnJlZA=="},"kind":"Secret","metadata":{"annotations":{},"labels":{"env":"development"},"name":"dev-dov-secret-5c9fkdg88f","namespace":"devns"},"type":"Opaque"}
    labels:
      env: development
    name: dev-dov-secret-5c9fkdg88f
    namespace: devns
  type: Opaque
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"dov","env":"development","name":"dov-svc"},"name":"dev-dov-svc","namespace":"devns"},"spec":{"ports":[{"name":"dov-svc-port","port":8080,"targetPort":3000}],"selector":{"app":"dov","env":"development","name":"dov-po"}}}
    labels:
      app: dov
      env: development
      name: dov-svc
    name: dev-dov-svc
    namespace: devns
  spec:
    ports:
    - name: dov-svc-port
      port: 8080
      targetPort: 3000
    selector:
      app: dov
      env: development
      name: dov-po
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"dov","env":"development","name":"dov-deploy"},"name":"dev-dov-deploy","namespace":"devns"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"dov","env":"development","name":"dov-po"}},"template":{"metadata":{"labels":{"app":"dov","env":"development","name":"dov-po"},"name":"dov-po","namespace":"myns"},"spec":{"containers":[{"env":[{"name":"INSTANCE_NAME","value":"my-first-deployment"},{"name":" [...]
    labels:
      app: dov
      env: development
      name: dov-deploy
    name: dev-dov-deploy
    namespace: devns
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: dov
        env: development
        name: dov-po
    template:
      metadata:
        labels:
          app: dov
          env: development
          name: dov-po
        name: dov-po
        namespace: myns
      spec:
        containers:
        - env:
          - name: INSTANCE_NAME
            value: my-first-deployment
          - name: INSTANCE_HASH
            valueFrom:
              fieldRef:
                fieldPath: status.podIP
          - name: SERVICE_NAME
            value: dev-dov-svc
          image: chukmunnlee/dov-bear:v5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
          name: dov-container
          ports:
          - containerPort: 3000
          resources:
            limits:
              cpu: 16m
              memory: 16Mi
            requests:
              cpu: 16m
              memory: 16Mi
        volumes:
        - emptyDir: {}
          name: myvol
kind: List
metadata: {}
